# music-tagger

./: .gitignore  CLAUDE.md  README.md  immediate_plan.md  justfile  plan.md  pyproject.toml  retag.py
.claude/fix-album/references/: genre-list.md
.claude/rip-album/: SKILL.md
.claude/rip-album/references/: genre-list.md
.claude/skills/fix-album/: SKILL.md
.github/workflows/: ci.yml
scripts/: repair.py  tag_chopin_mb.py  tag_musopen_dvd.py
src/music_tagger/: cli.py  coverart.py  discid.py  matcher.py  musicbrainz.py  navidrome.py  placement.py  replaygain.py  ripper.py  tagger.py  tags.py
tests/: conftest.py  test_cli.py  test_coverart.py  test_discid.py  test_matcher.py  test_musicbrainz.py  test_navidrome.py  test_placement.py  test_ripper.py  test_tagger.py  test_tags.py
tests/fixtures/album_flac/: 01 - Track 1.flac  02 - Track 2.flac  03 - Track 3.flac
