[project]
name = "music-tagger"
version = "0.1.0"
description = "LLM-assisted music tag cleanup using MusicBrainz"
readme = "README.md"
authors = [
    { name = "Alexander Gude", email = "alex.public.account@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "mutagen>=1.47",
    "anthropic>=0.52",
    "httpx>=0.28",
]

[project.scripts]
music-tagger = "music_tagger.cli:main"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"
