[project]
name = "music-tagger"
version = "0.1.0"
description = "LLM-assisted music tag cleanup using MusicBrainz"
readme = "README.md"
authors = [
    { name = "Alexander Gude", email = "alex.public.account@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "mutagen>=1.47",
    "httpx>=0.28",
    "discid>=1.4.2",
]

[project.scripts]
music-tagger = "music_tagger.cli:main"

[dependency-groups]
dev = [
    "mypy>=2.3.0",
    "pytest>=8",
    "ruff>=0.15.21",
]

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["music_tagger"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
